--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,7 @@
         "Admin"
     ],
     "require": {
-        "illuminate/support": "~10|~11",
-        "lcobucci/clock": "~3.2",
-        "lcobucci/jwt": "~5.2.0",
-        "onelogin/php-saml": "^4.0"
+        "illuminate/support": "~10|~11"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
