--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
         "illuminate/support": "~10|~11"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~7"
+        "orchestra/testbench": "~9",
+        "gajus/dindent": "^2.0",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -31,7 +32,11 @@
     "autoload-dev": {
         "psr-4": {
             "CodeCoz\\AimAdmin\\Tests\\": "tests"
-        }
+        },
+        "classmap": [
+            "tests/TestView.php",
+            "tests/ComponentTestCase.php"
+        ]
     },
     "extra": {
         "laravel": {
